--- a/resources/sass/ase-slider.scss
+++ b/resources/sass/ase-slider.scss
@@ -1,8 +1,4 @@
 .ase-slider-container {
-    .swiper-wrapper {
-        height: 100% !important;
-    }
-
     .ase-slider {
         display: flex;
         justify-content: center;
@@ -12,17 +8,28 @@
         background-repeat: no-repeat;
         min-width: 100%;
         min-height: 100%;
+        position: relative;
+        padding: 50px 0px;
+        &:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
         .ase-swiper-slide-inner {
             max-width: 66%;
             text-align: center;
-            .title, .content, .ase-slide-button {
-                margin-bottom: 30px;
+            .title, .content {
+                margin: 0 0 30px 0;
                 color: #fff;
             }
             .title {
                 font-size: 35px;
                 font-weight: 700;
-                line-height: 1;
+                line-height: 1.4;
             }
             .content {
                 font-size: 17px;
