--- a/resources/sass/ase-slider.scss
+++ b/resources/sass/ase-slider.scss
@@ -3,15 +3,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-size: cover;
-        background-position: 50%;
-        background-repeat: no-repeat;
         min-width: 100%;
         min-height: 100%;
-        position: relative;
         padding: 50px 0px;
-        &:before {
-            content: '';
+        position: relative;
+        .ase-background-overlay {
+            background-size: cover;
+            background-position: 50%;
+            background-repeat: no-repeat;
             position: absolute;
             left: 0;
             top: 0;
