--- a/resources/sass/ase-admin.scss
+++ b/resources/sass/ase-admin.scss
@@ -99,7 +99,7 @@
                 .btn-box {
                     display: flex;
                     gap: 17px;
-                    .installAddon {
+                    .ase-install-addon {
                         display: inline-block;
                         line-height: 1;
                         white-space: nowrap;
